--- a/dev/LoneWolf/res/raw/html_section_template.html
+++ b/dev/LoneWolf/res/raw/html_section_template.html
@@ -4,25 +4,7 @@
     <title>%1$s</title>
     <meta name="revised" content="%2$s" />
     <meta charset="UTF-8" />
-    <style type="text/css">
-        html, body {
-        background-color: #ffffe6;
-        color: #003300;
-        font-family: Souvenir, Georgia, "Times New Roman", Times, serif;
-        }
-        p { text-align: justify }
-        figure {
-        text-align: center;
-        }
-        .choice, .combat {
-        text-align: left;
-        margin-left: 15px;
-        width: 435px;
-        }
-        .smallcaps {
-        font-size: 0.8em;
-        }
-    </style>
+    <style type="text/css">%3$s</style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.css" /-->
     <!--script src="http://code.jquery.com/jquery-1.7.1.min.js"></script-->
@@ -34,78 +16,10 @@ Illustrations copyright © 1984 Gary Chalk.
 Published by Project Aon.
 -->
 <body>
-%3$s
+%5$s
 <script type="text/javascript">
-function disableAll() {
-    console.log("disableAll");
-    disableAllChoices();
-    disableRandomNumber();
-    disableAllCombats();
-}
-function disableChoice(section) {
-    console.log("disableChoice: " + section);
-    var choice = document.getElementById(section);
-    choice.style.color = "gray";
-    var button = choice.getElementsByTagName("button")[0];
-    button.disabled = true;
-}
-function disableAllChoices() {
-    console.log("disableAllChoices");
-    var paragraphs = document.getElementsByTagName("p");
-    for (i in paragraphs) {
-        var paragraph = paragraphs[i];
-        if (paragraph.className == "choice") {
-            paragraph.style.color = "gray";
-            var button = paragraph.getElementsByTagName("button")[0];
-            button.disabled = true;
-        }
-    }
-}
-function disableRandomNumber() {
-    console.log("disableRandomNumber");
-    var buttons = document.getElementsByTagName("button");
-    for (i in buttons) {
-        var button = buttons[i];
-        if (button.className == "random-number") {
-            button.disabled = true;
-        }
-    }
-}
-function disableAllCombats() {
-    console.log("disableAllCombats");
-    var buttons = document.getElementsByTagName("button");
-    for (i in buttons) {
-        var button = buttons[i];
-        if (button.className == "combat") {
-            button.disabled = true;
-        }
-    }
-}
-function disableCombat(index) {
-    console.log("disableCombat: " + index);
-    var count = 0;
-    var buttons = document.getElementsByTagName("button");
-    for (i in buttons) {
-        var button = buttons[i];
-        if (button.className == "combat") {
-            if(index == count) {
-                button.disabled = true;
-            }
-            count++;
-        }
-    }
-}
-function displayRandomNumber(value) {
-    console.log("displayRandomNumber: " + value);
-    var buttons = document.getElementsByTagName("button");
-    for (i in buttons) {
-        var button = buttons[i];
-        if (button.className == "random-number") {
-            button.innerHTML += ": " + value;
-        }
-    }
-}
 %4$s
+%6$s
 </script>
 </body>
 </html>
