Updated action chart html/js

--- a/dev/LoneWolf/res/raw/html_actionchart_template.html
+++ b/dev/LoneWolf/res/raw/html_actionchart_template.html
@@ -38,8 +38,8 @@
         </ul>
     </div>
 
-    <div id="loot">
-        <h2>Loot</h2>
+    <div id="section-items">
+        <h2>Section items</h2>
         <ul>
         </ul>
     </div>
